--- a/1-counts-tables.html
+++ b/1-counts-tables.html
@@ -14,7 +14,7 @@
 class: center, middle, title-slide
 
 # Data Exploration in R
-## Counts, Tables and Heatmaps
+## Counts and Tables
 ### Prof. Dr. Jan Kirenz
 ### HdM Stuttgart
 
